# GitR-fiuba

./: .gitignore  README.md  comando
gitr/: .head_repo  Cargo.toml  comandos_CURL  gitrconfig  hola
gitr/Gianni/: .head_repo  gitrconfig
gitr/Gianni/gianni_repo/: arch_g
gitr/Gianni/s/: base
gitr/Juanma/: .head_repo  gitrconfig
gitr/Juanma/clonado/: base
gitr/Juanma/cuatro/: ppp
gitr/Juanma/dos/: hola2
gitr/aaaaa/: hgl
gitr/aaaaa/gitr/: index
gitr/abersiahora/gitr/: HEAD  index
gitr/agus/: gitrconfig
gitr/agus/repo_clonado/: archivo_nuevo.txt
gitr/ahoraa/gitr/: index
gitr/bb/: merequetengue.rs
gitr/bb/gitr/: index
gitr/bruno/: .head_repo  gitrconfig
gitr/client/: gitrconfig
gitr/client/repo/: hola  (+2 more)
gitr/cliente/: .head_repo  gitrconfig
gitr/cliente2/: .head_repo  gitrconfig
gitr/clienttt/: gitrconfig
gitr/clonado/: hola.txt
gitr/fecheado/: pusheado.rs
gitr/gianni/: .head_repo  gitrconfig
gitr/juan/: .head_repo  gitrconfig
gitr/juanma/: gitrconfig
gitr/merge_demo/: .head_repo  gitrconfig
gitr/new_repo/: yay.rs
gitr/nuevito/: hola
gitr/nuevitorepo/: hola
gitr/nuevo_repo/: hola
gitr/otromas/: hola
gitr/probando/: hola.txt
gitr/pruebas_3/: test.rs
gitr/remote_repo/: HEAD
gitr/repo/: chau  hola  hola_mergeado
gitr/repo2/: hola
gitr/repo_clonado/: hola
gitr/repo_gui/: hola
gitr/src/: command_utils.rs  diff.rs  ejemplo  file_manager.rs  gitr_errors.rs  lib.rs  log.json  logger.rs  main.rs  main_server.rs  nuevo.md  partederecha.md
gitr/test_cat_file_blob/: blob1  blob2
gitr/tests/: comands_tests.rs
(+374 files in other folders)
