[package]
name = "gitr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.31"
flate2 = "1.0.27"
sha1 = "0.10.6"
serial_test = "*"
to-binary = "0.4.0"
gtk = "0.18.0"
atk-sys = "0.18.0"
glib-sys = "0.18.1"
gio-sys = "0.18.1"
cairo-sys-rs = "0.18.2"
